# ruth-skills

./: .gitignore  README.md
.agents/plugins/: marketplace.json
docs/superpowers/specs/: 2026-06-28-tailor-resume-design.md
plugins/tailor-resume/.codex-plugin/: plugin.json
plugins/tailor-resume/skills/tailor-resume/references/: report-fields.md
plugins/tailor-resume/skills/tailor-resume/scripts/: render_resume.py  scrape_job.py
plugins/tailor-resume/skills/tailor-resume/tests/: test_end_to_end.py  test_render.py  test_report.py  test_resume_schema.py  test_scrape.py  test_selected_resume.py  test_skill_contract.py
tailor-resume/: SKILL.md  pyproject.toml
tailor-resume/agents/: openai.yaml
tailor-resume/config/: resume.yaml
tailor-resume/references/: resume-yaml-schema.md  selected-resume-schema.md
tailor-resume/scripts/: create_report.py  validate_resume_yaml.py
tailor-resume/scripts/tailor_resume/: __init__.py  render.py  report.py  schema.py  scrape.py  selected.py
tailor-resume/tests/: test_end_to_end.py  test_render.py  test_report.py  test_resume_schema.py  test_selected_resume.py
tailor-resume/tests/fixtures/: resume.yaml
