[project]
name = "tailor-resume-skill"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "PyYAML>=6.0.0",
  "reportlab>=4.0.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["tailor_resume*"]
